<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTaskActivity">

    <TextView
        android:id="@+id/addTaskTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/addTaskTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addTaskTitleEditText"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:hint="@string/taskTitle"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTitleTextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addTaskDescriptionEditText"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/taskDescription"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTitleEditText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addTaskStateEditText"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/taskState"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskDescriptionEditText" />

    <Button
        android:id="@+id/addTaskSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/addTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTeamSpinner" />

    <Spinner
        android:id="@+id/addTaskTeamSpinner"
        android:layout_width="325dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskStateEditText" />

    <Button
        android:id="@+id/addTaskAddImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:text="@string/addImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toEndOf="@+id/addTaskSubmitButton"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTeamSpinner" />

    <ImageView
        android:id="@+id/addTaskPreviewImageView"
        android:layout_width="109dp"
        android:layout_height="101dp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskTitleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@+id/addTaskTitleTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>