<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerifyActivity">

    <TextView
        android:id="@+id/verifyTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:text="@string/verifyAccount"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/verifyUsernameEditText"
        android:layout_width="236dp"
        android:layout_height="47dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/usernameTitle"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyTitleTextView" />

    <EditText
        android:id="@+id/verifyCodeEditText"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyUsernameEditText" />

    <Button
        android:id="@+id/verifySubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/verifyAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyCodeEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>